--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ height:30px;
 		
 	}
 	
-.w3-col.s4{
+.w3-col.s41{
 		width:31%;
 			
     }	
@@ -163,3 +163,269 @@ border:1px solid white;
 .imgcenter{
     margin-left: 39%;
 }
+
+/* Tv Guide Styling */ 
+
+#rere1 th, td {
+  text-align: left;
+  padding: 13px;	
+
+border:1px solid #100d14;
+}
+
+#rere1 tr:nth-child(even){
+background-color:#373743;
+color:white;
+font-size:18px;
+
+
+}
+
+#rere1 th {
+  background-color:#100d14;
+  color: white;
+height:30px;
+
+font-family:Arial, Helvetica, sans-serif;
+font-size:18px;
+}
+
+#rere1 tr:nth-child(odd){
+background-color:#373743;
+color:white;
+font-size:18px;
+border:1px solid #100d14;
+  
+}
+
+#rere1 td a{
+text-decoration:none;
+color:white;	
+padding-right:100px;
+}
+
+#rere1 td:hover{
+background:#066899;
+}
+
+#rere1 td.activeCell{
+background:#066899;
+}
+
+.righttvguide{
+height:400px;
+background-color:#24222d;
+float:left;
+width: 44%;	
+}
+
+
+
+.lefttvguide{
+height:400px;	
+background-color:#4c505c;
+}
+
+.tvguidetop{
+height:30px;
+background-color:#4c505c;
+width:100%;
+}
+
+.tvguidemiddle{
+
+height:300px;
+
+}
+
+.tvguidebottom{
+
+height:40px;
+background-color:#4c505c;
+}
+
+.table1{
+
+height:300px;	
+background-color:#100d14;
+}
+
+.table2{
+
+height:300px;
+background-color:#100d14;
+
+
+}
+
+#txta h1{
+
+margin-top:0px;
+color:#fff;
+font-family:Arial, Helvetica, sans-serif;
+text-align: center;
+}
+#txta h3{
+color:#05709e;
+margin-top:-30px;
+font-family:Arial, Helvetica, sans-serif;
+text-align: center;
+font-size: 20px;
+
+}
+
+#txta h4{
+color:grey;
+margin-top: -27px;
+font-family:Arial, Helvetica, sans-serif;
+text-align: center;
+}
+
+#txta p {
+color:white;
+margin-right:10%;
+font-family:Arial, Helvetica, sans-serif;
+text-align: center;
+padding:20px;
+}
+
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#rere th, td {
+  text-align: left;
+  padding: 8px;	
+font-family:Arial, Helvetica, sans-serif;
+border:1px solid #100d14;
+}
+
+#rere tr:nth-child(even){
+background-color:#100d14;
+color:white;
+font-size:18px;
+
+
+}
+
+#rere th {
+  background-color:#100d14;
+  color: white;
+height:30px;
+
+font-family:Arial, Helvetica, sans-serif;
+font-size:18px;
+}
+
+#rere tr:nth-child(odd){
+background-color:#100d14;
+color:white;
+font-size:18px;
+border:1px solid #100d14;
+  
+}
+
+#videot{
+margin-left:60.9%;
+margin-top:-32%;
+
+}
+
+#rere span{
+color:#5a575e;
+font-family:Arial, Helvetica, sans-serif;
+
+}
+
+
+.w3-col.s1{
+width:8.33333%;
+  
+}
+.w3-col.s2{
+width:16.66666%;
+  
+}
+.w3-col.s3{
+width:24.99999%;
+  
+}
+
+.w3-col.s4{
+  width:33.33333%;
+    
+}	
+
+
+.w3-content{
+max-width:980px;margin:auto;
+
+
+}
+
+
+/* Tv Guide Styling Endpoint */ 
+
+.horTabscw ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  margin-left: 10%;
+
+  
+}
+
+.horTabscw li {
+  float: left;
+  
+}
+
+.horTabscw li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 25px;
+  text-decoration: none;
+  font-size: 18px;
+
+}
+
+.horTabscw li a:hover {
+  border-bottom: 1px solid #fff;
+  color: #fff;
+
+}
+
+.horTabscw .active {
+  border-bottom: 3px solid #FF00FF;
+
+}
+
+.boom{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	border: 3px solid #fff;
+}
+
+.styleLeft{
+	float:left;
+	width:20%;
+}
+
+
+.grayText{
+	color:grey;
+}
+
+span{
+	cursor: pointer;
+}
+
+
+/*
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gl1aHhXnN1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+*/
